--- a/爬虫/爬虫.md
+++ b/爬虫/爬虫.md
@@ -14,6 +14,64 @@
 
 ### 发送请求
 
+实质是模拟浏览器发送 http 请求报文的过程，实际中只需要请求服务器需要的部分报文。
+
+> 请求报文：请求行、请求头、空行、请求体
+
+![Alt](./assets/request-message.jpg#pic_center)
+
+[使用Fiddler抓取http请求(抓包)](https://www.cnblogs.com/yyhh/p/5140852.html)
+
+一个完整的 http 请求报文
+
+```http
+POST http://columbus.os.adc.com/api/coop/requirement/tree/query/prune/page?projectId=100001 HTTP/1.1
+Host: columbus.os.adc.com
+Connection: keep-alive
+Content-Length: 483
+Accept: application/json, text/plain, */*
+Origin: http://columbus.os.adc.com
+User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/65.0.3314.0 Safari/537.36 SE 2.X MetaSr 1.0
+Content-Type: application/json;charset=UTF-8;multipart/form-data
+Referer: http://columbus.os.adc.com/requirement/list?projectId=100001
+Accept-Encoding: gzip, deflate
+Accept-Language: zh-CN,zh;q=0.9
+Cookie: SESSION=1e365567-bbed-4ff8-b033-6ab21dc05bd2; user=W9005349
+
+{"projectId":"100001","title":"","assignUsers":[],"isArchived":-1}
+```
+
+#### 请求行
+
+请求方法 + 空格 +请求URL + 空格 + HTTP协议版本 + 回车 换行
+
+#### 请求头
+
+请求的配置信息，key-value 形式发送给服务器
+
+> Accept： 浏览器可接受的MIME类型。
+> Accept-Charset：浏览器可接受的字符集。
+> Accept-Encoding：浏览器能够进行解码的数据编码方式，比如gzip。Servlet能够向支持gzip    的浏览器返回经gzip编码的HTML页面。许多情形下这可以减少5到10倍的下载时间。
+> Accept-Language：浏览器所希望的语言种类，当服务器能够提供一种以上的语言版本时要用到。
+> Content-Length：表示请求消息正文的长度。
+> Host： 客户机通过这个头告诉服务器，想访问的主机名。Host头域指定请求资源的Intenet主机和端口号，必须表示请求url的原始服务器或网关的位置。HTTP/1.1请求必须包含主机头域，否则系统会以400状态码返回。
+> If-Modified-Since：客户机通过这个头告诉服务器，资源的缓存时间。只有当所请求的内容在指定的时间后又经过修改才返回它，否则返回304“Not Modified”应答。
+> Referer：客户机通过这个头告诉服务器，它是从哪个资源来访问服务器的(防盗链)。包含一个URL，用户从该URL代表的页面出发访问当前请求的页面。
+> User-Agent：User-Agent头域的内容包含发出请求的用户信息。浏览器类型，如果Servlet返回的内容与浏览器类型有关则该值非常有用。
+> Cookie：客户机通过这个头可以向服务器带数据，这是最重要的请求头信息之一。
+> Cookie2：用来说明请求端支持的cookie版本。
+> Range：如果服务器支持范围请求，就请求资源的指定范围。
+
+#### 空行
+
+通过空行告诉服务器请求头部结束。
+
+#### 请求体
+
+根据不同的请求方法包含不同的内容。
+get: 空
+post: 表单数据
+
 ## 商业场景
 
 1. 搜索引擎
