--- a/爬虫/爬虫.md
+++ b/爬虫/爬虫.md
@@ -16,8 +16,19 @@
 
 实质是模拟浏览器发送 http 请求报文的过程，实际中只需要请求服务器需要的部分报文。
 
-> 请求报文：请求行、请求头、空行、请求体
+#### 请求库
 
+模拟浏览器的请求
+
+1. requests 爬虫最常用的库
+    比起之前用到的urllib，requests模块的api更加便捷（本质就是封装了urllib3）。
+
+2. urllib
+    提供了一系列用于操作URL的功能。
+
+#### 请求报文
+
+请求行、请求头、空行、请求体
 ![Alt](./assets/request-message.jpg#pic_center)
 
 [使用Fiddler抓取http请求(抓包)](https://www.cnblogs.com/yyhh/p/5140852.html)
@@ -41,11 +52,11 @@ Cookie: SESSION=1e365567-bbed-4ff8-b033-6ab21dc05bd2; user=W9005349
 {"projectId":"100001","title":"","assignUsers":[],"isArchived":-1}
 ```
 
-#### 请求行
+##### 请求行
 
 请求方法 + 空格 +请求URL + 空格 + HTTP协议版本 + 回车 换行
 
-#### 请求头
+##### 请求头
 
 请求的配置信息，key-value 形式发送给服务器
 
@@ -62,11 +73,11 @@ Cookie: SESSION=1e365567-bbed-4ff8-b033-6ab21dc05bd2; user=W9005349
 > Cookie2：用来说明请求端支持的cookie版本。
 > Range：如果服务器支持范围请求，就请求资源的指定范围。
 
-#### 空行
+##### 空行
 
 通过空行告诉服务器请求头部结束。
 
-#### 请求体
+##### 请求体
 
 根据不同的请求方法包含不同的内容。
 get: 空
