--- a/爬虫/爬虫.md
+++ b/爬虫/爬虫.md
@@ -83,6 +83,79 @@ Cookie: SESSION=1e365567-bbed-4ff8-b033-6ab21dc05bd2; user=W9005349
 get: 空
 post: 表单数据
 
+### 接收响应
+
+获取特定请求返回的响应报文，提取目标数据。
+
+#### 响应报文
+
+响应行、响应头、空行、响应体
+![Alt](./assets/response-message.jpg#pic_center)
+
+一个完整的 http 响应报文
+
+```http
+HTTP/1.1 200
+Server: nginx/1.12.2
+Date: Thu, 23 Jan 2020 02:03:03 GMT
+Content-Type: application/json;charset=UTF-8
+Transfer-Encoding: chunked
+Connection: keep-alive
+trace-id: 15-32349ee9-8945-438c-91a6-33ff10c0c0ee-18882
+X-Content-Encoding-Over-Network: gzip
+
+77
+{"status":200,"msg":null,"data":{"result":[],"pageInfo":{"totalPages":0,"totalRecords":0,"pageNumber":1,"pageSize":5}}}
+0
+```
+
+##### 响应行
+
+http协议版本 + 空格 + 状态码 + 空格 + 状态码描述 + 回车 换行
+
+http状态码
+
+1. 100~199：信息，服务器收到请求，需要请求者继续执行操作
+
+2. 200~299：成功，操作被成功接收并处理
+
+3. 300~399：重定向，需要进一步的操作以完成请求
+
+4. 400~499：客户端错误，请求包含语法错误或无法完成请求
+
+5. 500~599：服务器错误，服务器在处理请求的过程中发生错误
+
+##### 响应头
+
+描述服务器和数据的基本信息。
+
+Set-Cookie：设置浏览器 Cookie，以后当浏览器访问符合条件的 URL 时，会自动带上该 Cooike
+Refresh：告诉浏览器隔多久刷新一次，以秒计
+
+##### 空行
+
+响应头结束
+
+##### 响应体
+
+网站返回的数据
+
+### 解析网页
+
+1. 提取网页链接
+
+2. 提取网页资源
+
+#### 解析库
+
+源码中找到并提取数据
+
+1. Beautiful Soup
+    Beautiful Soup 是 python 的一个库，其最主要的功能是从网页中抓取数据。
+
+2. pyquery
+    据说比beautiful 好用，语法和jquery非常像。
+
 ## 商业场景
 
 1. 搜索引擎
