--- a/爬虫/爬虫.md
+++ b/爬虫/爬虫.md
@@ -156,6 +156,12 @@ Refresh：告诉浏览器隔多久刷新一次，以秒计
 2. pyquery
     据说比beautiful 好用，语法和jquery非常像。
 
+## 爬虫开源框架
+
+1. scrapy：是Python开发的一个快速、高层次的屏幕抓取和web抓取框架，用于抓取web站点并从页面中提取结构化的数据。Scrapy用途广泛，可以用于数据挖掘、监测和自动化测试。
+
+2. nutch： 是一个开源Java实现的搜索引擎。它提供了我们运行自己的搜索引擎所需的全部工具。包括全文搜索和Web爬虫。
+
 ## 商业场景
 
 1. 搜索引擎
